@@ -60,16 +60,16 @@
             android:title="@string/settings_list_order_title" />
         <CheckBoxPreference
             android:defaultValue="false"
+            android:key="show_current_age"
+            android:title="@string/settings_show_current_age" />
+        <CheckBoxPreference
+            android:defaultValue="false"
             android:key="hide_zodiac"
             android:title="@string/settings_list_hide_zodiac" />
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="hide_no_year_msg"
             android:title="@string/settings_hide_no_year_msg" />
-        <CheckBoxPreference
-            android:defaultValue="false"
-            android:key="show_current_age"
-            android:title="@string/settings_show_current_age" />
     </PreferenceCategory>
 
     <PreferenceCategory
