@@ -1,5 +1,7 @@
 * V32
 - Better list layout
+- Badges for ages
+- Organizing preferences
 
 * V31
 - Settings to go back to the old statistics view
